testdata/baselines/reference/submodule/compiler/staticInstanceResolution5.errors.txt
staticInstanceResolution5_0.ts(1,14): error TS2529: Duplicate identifier 'Promise'. Compiler reserves name 'Promise' in top level scope of a module containing async functions.
staticInstanceResolution5_1.ts(4,14): error TS2709: Cannot use namespace 'WinJS' as a type.
staticInstanceResolution5_1.ts(5,23): error TS2709: Cannot use namespace 'WinJS' as a type.
staticInstanceResolution5_1.ts(6,16): error TS2709: Cannot use namespace 'WinJS' as a type.


==== staticInstanceResolution5_1.ts (3 errors) ====
    import WinJS = require('./staticInstanceResolution5_0');
    
    // these 3 should be errors
    var x = (w1: WinJS) => { };
                 ~~~~~
!!! error TS2709: Cannot use namespace 'WinJS' as a type.
    var y = function (w2: WinJS) { }
                          ~~~~~
!!! error TS2709: Cannot use namespace 'WinJS' as a type.
    function z(w3: WinJS) { }
                   ~~~~~
!!! error TS2709: Cannot use namespace 'WinJS' as a type.
    
==== staticInstanceResolution5_0.ts (1 errors) ====
    export class Promise {
                 ~~~~~~~
!!! error TS2529: Duplicate identifier 'Promise'. Compiler reserves name 'Promise' in top level scope of a module containing async functions.
        static timeout(delay: number): Promise {
            return null;
        }
    }
    